--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,3 +1,12 @@
+p, h1, h2, h3, h4, h5, h6
+  padding: 0
+  margin: 0
+
+h1
+  padding: 0 10px 10px
+  margin-bottom: 10px
+  border-bottom: 1px solid #d5d5d5
+  
 .float-right 
   float: right !important
 
