--- a/src/styles/Layout.sass
+++ b/src/styles/Layout.sass
@@ -44,9 +44,13 @@
     padding-left: 0
     padding-right: 0
 
-@media only screen and (min-width: 601px) and (max-width: 850px)
+@media only screen and (min-width: 601px) and (max-width: 700px)
   .content_box
     width: 540px
+
+@media only screen and (min-width: 701px) and (max-width: 850px)
+  .content_box
+    width: 640px
 
 @media only screen and (min-width: 1201px)
   .content_box
