--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,3 +1,10 @@
+:root
+  --white-theme-color-white1: #fff
+  --white-theme-color-white2: #d5d5d5
+  --white-theme-color-teal1: #58b2c9
+  --white-theme-color-teal2: #83d5e9
+  
+  
 p, h1, h2, h3, h4, h5, h6
   padding: 0
   margin: 0
@@ -5,7 +12,7 @@ p, h1, h2, h3, h4, h5, h6
 h1
   padding: 0 10px 10px
   margin-bottom: 10px
-  border-bottom: 1px solid #d5d5d5
+  border-bottom: 1px solid var(--white-theme-color-white2)
   
 .float-right 
   float: right !important
