--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #d5d5d5;
+  background-color: var(--white-theme-color-white2);
 }
 
 code {
