--- a/src/styles/Products.sass
+++ b/src/styles/Products.sass
@@ -10,6 +10,10 @@
     transition: 0.3s
     width: 32%
     margin: 5px
+    
+    a
+      text-decoration: none
+      color: black
 
     &:hover
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2)
