--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -19,3 +19,9 @@ h1
 
 .float-left 
   float: left !important
+  
+
+h1, h2, h3, h4, h5, h6
+  padding: 5px 0 7px
+  border-bottom: 1px solid #5cbbd5
+  margin-bottom: 5px
