--- a/src/styles/Products.sass
+++ b/src/styles/Products.sass
@@ -35,11 +35,6 @@
 
     h4, p
       text-align: center
-
-    h4
-      padding: 5px 0 7px
-      border-bottom: 1px solid #5cbbd5
-      margin-bottom: 5px
   
   &_price
     font-size: 1.1rem
@@ -72,6 +67,51 @@
     -webkit-line-clamp: 2
     -webkit-box-orient: vertical
     overflow: hidden
+
+.productPreview
+  &_container
+    display: flex
+    justify-content: space-between
+
+  &_image
+    width: 450px
+    padding: 10px
+    background-color: #000
+    flex-shrink: 0
+
+    &_thumbnail
+      width: 100%
+      height: 380px
+      object-fit: contain
+      overflow: hidden
+      
+      &:hover
+        cursor: pointer
+
+    &_list
+      display: flex
+      align-items: center
+      justify-content: center
+      background-color: #e7e7e736
+      overflow: auto
+      white-space: nowrap
+
+      img
+        height: 60px
+        margin: 12px
+      
+        &:hover
+          cursor: pointer
+
+  &_content
+    width: 450px
+    padding: 0 20px
+
+  &_title
+    padding: 10px
+
+  &_description
+    padding: 15px 10px
 
 @media only screen and (max-width: 300px)
   .products_container
