--- a/src/styles/Layout.sass
+++ b/src/styles/Layout.sass
@@ -22,6 +22,12 @@
       background-color: #111
 
 .header
+  position: fixed
+  top: 0
+  width: 100%
+  display: block
+  transition: top 0.3s
+
   .navbar
     list-style-type: none
 
@@ -35,6 +41,7 @@
   align-self: center
   width: 800px
   padding: 20px
+  margin-top: 50px
   background-color: #fff
 
 
