product preview image style changes

--- a/src/styles/Products.sass
+++ b/src/styles/Products.sass
@@ -76,7 +76,7 @@
   &_image
     width: 450px
     padding: 10px
-    background-color: #000
+    background: none
     flex-shrink: 0
 
     &_contain
@@ -100,10 +100,7 @@
         transform: scale(1.5)
 
     &_list
-      display: flex
-      align-items: center
-      justify-content: center
-      background-color: #373737
+      background: none
       overflow: auto
       white-space: nowrap
 
@@ -112,13 +109,13 @@
         cursor: pointer
       
       &::-webkit-scrollbar-track
-        background: #373737
+        background: none
 
       &::-webkit-scrollbar-thumb
-        background: #676767
+        background: #acacac
 
         &:hover
-          background: #838383
+          background: #8c8c8c
 
       img
         height: 60px
