--- a/src/styles/Products.sass
+++ b/src/styles/Products.sass
@@ -83,21 +83,18 @@
       overflow: hidden
 
     &_thumbnail
-      width: 100%
-      height: 380px
-      object-fit: contain
-      position: static
+      background-position: 50% 50%
+      overflow: hidden
+      cursor: pointer
 
-      // ZOOM IN
-      transition: transform .5s
+      img
+        transition: opacity 0.5s
+        display: block
+        width: 100%
       
-      &:hover
-        cursor: pointer
+        &:hover
+          opacity: 0
 
-        // ZOOM IN
-        -ms-transform: scale(1.5)
-        -webkit-transform: scale(1.5)
-        transform: scale(1.5)
 
     &_list
       background: none
