--- a/src/styles/Products.sass
+++ b/src/styles/Products.sass
@@ -81,16 +81,23 @@
 
     &_contain
       overflow: hidden
+      min-height: 300px
+      display: flex
+      align-items: center
+      justify-content: center
 
     &_thumbnail
       background-position: 50% 50%
       overflow: hidden
       cursor: pointer
+      background-repeat: no-repeat
 
       img
         transition: opacity 0.5s
         display: block
         width: 100%
+        max-height: 380px
+        object-fit: contain
       
         &:hover
           opacity: 0
@@ -117,6 +124,7 @@
       img
         height: 60px
         margin: 12px
+        border: 1px solid #acacac
       
         &:hover
           cursor: pointer
