working on project file structure

--- a/src/assets/styles/Products.sass
+++ b/src/assets/styles/Products.sass
@@ -91,6 +91,8 @@
       overflow: hidden
       cursor: pointer
       background-repeat: no-repeat
+      border: 1px solid #efefef
+      margin: 10
 
       img
         transition: opacity 0.5s
