--- a/src/assets/styles/ProductView.sass
+++ b/src/assets/styles/ProductView.sass
@@ -30,10 +30,9 @@
         width: 100%
         max-height: 380px
         object-fit: contain
-      
+
         &:hover
           opacity: 0
-
 
     &_list
       background: none
@@ -43,7 +42,7 @@
       &::-webkit-scrollbar
         height: 10px
         cursor: pointer
-      
+
       &::-webkit-scrollbar-track
         background: none
 
@@ -55,9 +54,9 @@
 
       img
         height: 60px
-        margin: 12px
+        margin: 10px 10px 0
         border: 1px solid #acacac
-      
+
         &:hover
           cursor: pointer
 
@@ -68,9 +67,67 @@
   &_title
     padding: 10px
 
+  &_stars
+    display: flex
+
+    .star
+      width: 20px
+      height: 20px
+
+      &.no
+        filter: grayscale(1)
+  
+  &_rating
+    margin-left: 10px
+    font-size: 15px
+
   &_description
     padding: 15px 10px
 
+  &_price
+    padding: 4px
+    font-size: 20px
+    font-weight: 500
+    line-height: 29px
+    text-align: center
+
+    span
+      display: inline-block
+      width: auto
+      height: 30px
+      background-color: #f00
+      -webkit-border-radius: 3px 4px 4px 3px
+      -moz-border-radius: 3px 4px 4px 3px
+      border-radius: 3px 4px 4px 3px
+      border-left: 1px solid #f00
+      margin-left: 38px
+      position: absolute
+      color: white
+      font-size: 17px
+      font-weight: 500
+      padding: 0 15px 0 10px
+
+      &:before
+        content: ""
+        position: absolute
+        display: block
+        left: -19px
+        width: 0
+        height: 0
+        border-top: 15px solid transparent
+        border-bottom: 15px solid transparent
+        border-right: 19px solid #f00
+
+      &:after
+        content: ""
+        background-color: white
+        border-radius: 50%
+        width: 4px
+        height: 4px
+        display: block
+        position: absolute
+        left: -9px
+        top: 13px
 
 @media only screen and (min-width: 851px) and (max-width: 1000px)
   .productPreview_image
