--- a/src/assets/styles/ProductView.sass
+++ b/src/assets/styles/ProductView.sass
@@ -19,7 +19,7 @@
     &_thumbnail
       background-position: 50% 50%
       overflow: hidden
-      cursor: pointer
+      cursor: crosshair
       background-repeat: no-repeat
       border: 1px solid #efefef
       margin: 10
@@ -61,6 +61,7 @@
           cursor: pointer
 
   &_content
+    position: relative
     width: 450px
     padding: 0 20px
 
@@ -76,7 +77,7 @@
 
       &.no
         filter: grayscale(1)
-  
+
   &_rating
     margin-left: 10px
     font-size: 15px
@@ -85,6 +86,12 @@
     padding: 15px 10px
 
   &_price
+    position: absolute
+    bottom: 55px
+    left: 0
+    right: 0
+    margin: 0 20px
+
     padding: 4px
     font-size: 20px
     font-weight: 500
@@ -128,6 +135,19 @@
         position: absolute
         left: -9px
         top: 13px
+
+  &_button
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
+    margin: 0 20px
+    padding: 15px 0
+    border-radius: 0
+    border: none
+    background-color: var(--white-theme-color-teal1)
+    font-weight: bold
+    text-transform: uppercase
 
 @media only screen and (min-width: 851px) and (max-width: 1000px)
   .productPreview_image
