--- a/src/assets/styles/ProductView.sass
+++ b/src/assets/styles/ProductView.sass
@@ -52,6 +52,9 @@
         &:hover
           background: #8c8c8c
 
+        &:active
+          background: #666666
+
       img
         height: 60px
         margin: 10px 10px 0
