--- a/src/assets/styles/PopUp.sass
+++ b/src/assets/styles/PopUp.sass
@@ -1,14 +1,31 @@
 .popup
-  &_bg
-    position: fixed
-    top: 0
-    left: 0
-    background-color: #2d383d8f
-    width: 100%
-    height: 100%
-
   &_container
-    margin: 60px auto
-    padding: 10px
-    background-color: var(--white-theme-color-white1)
-    width: 800px
+    position: fixed
+    bottom: 75px
+    left: 30px
+    height: 35px
+    background: #ffcece
+    color: #f00
+    display: flex
+    align-items: center
+    border: 1px solid #f00
+    border-radius: 5px
+
+    transition: opacity .4s linear
+
+  &_text
+    padding: 0 20px
+    font-weight: 500
+    font-size: 15px
+
+  &_button
+    background: none
+    border: none
+    border-left: 2px solid #f00
+    width: 33px
+    color: #f00
+    font-weight: 300
+    font-size: 22px
+
+    &:hover
+      cursor: pointer
