--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -25,3 +25,6 @@ h1, h2, h3, h4, h5, h6
   padding: 5px 0 7px
   border-bottom: 1px solid #5cbbd5
   margin-bottom: 5px
+
+.m-t-auto
+  margin-top: auto
