navbar visual changes

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -28,3 +28,18 @@ h1, h2, h3, h4, h5, h6
 
 .m-t-auto
   margin-top: auto
+
+.inline
+  display: inline-block
+
+.flex
+  display: flex
+
+.space-between
+  justify-content: space-between
+
+.grow
+  flex-grow: 1
+
+.noShrink
+  flex-shrink: 0
