--- a/src/assets/styles/Layout.sass
+++ b/src/assets/styles/Layout.sass
@@ -10,7 +10,6 @@
   overflow: hidden
 
   a, p
-    display: block
     color: #fff
     text-align: center
     padding: 14px 16px
@@ -25,14 +24,15 @@
   position: fixed
   top: 0
   width: 100%
-  display: block
   transition: top 0.3s
 
-  .navbar
-    list-style-type: none
+.navbar_button
+  display: inline-block
 
-    & li
-      float: left
+.title
+  font-weight: 500
+  padding-right: 45px !important
+  padding-left: 30px !important
 
 .footer
   margin-top: auto
