--- a/src/assets/styles/Products.sass
+++ b/src/assets/styles/Products.sass
@@ -16,7 +16,7 @@
       color: black
 
     &:hover
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2)
+      box-shadow: 0 8px 16px 5px rgba(0,0,0,0.2)
       
   &_image
     height: 220px
