separate text and background color

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -1,7 +1,8 @@
 :root
   --white-theme-color-white1: #fff
   --white-theme-color-white2: #d5d5d5
-  --white-theme-color-teal1: #58b2c9
+  --white-theme-color-teal_text: #58b2c9
+  --white-theme-color-teal_bg: #56c3df
   --white-theme-color-teal2: #83d5e9
   
   
