product scale on hover

--- a/src/assets/styles/Layout.sass
+++ b/src/assets/styles/Layout.sass
@@ -25,13 +25,14 @@
   top: 0
   width: 100%
   transition: top 0.3s
+  z-index: 3
 
 .navbar_button
   display: inline-block
 
 .title
   font-weight: 500
-  padding-right: 45px !important
+  padding-right: 30px !important
   padding-left: 30px !important
 
 .footer
