--- a/src/assets/styles/Layout.sass
+++ b/src/assets/styles/Layout.sass
@@ -4,7 +4,7 @@
   flex-direction: column
   justify-content: flex-start
 
-.header, .footer
+.navbar, .footer
   background-color: #333
   color: #fff
   overflow: hidden
@@ -20,20 +20,25 @@
     &:hover:not(.active)
       background-color: #111
 
-.header
+.navbar
   position: fixed
   top: 0
   width: 100%
   transition: top 0.3s
   z-index: 3
 
-.navbar_button
-  display: inline-block
+  &_button
+    display: inline-block
 
-.title
-  font-weight: 500
-  padding-right: 30px !important
-  padding-left: 30px !important
+    &_dropdown
+      display: none
+      padding: 5px 10px
+      margin: 5px 15px
+
+  &_title
+    font-weight: 500
+    padding-right: 30px !important
+    padding-left: 30px !important
 
 .footer
   margin-top: auto
@@ -44,7 +49,6 @@
   padding: 20px
   margin-top: 50px
   background-color: #fff
-
 
 @media only screen and (max-width: 600px)
   .content_box
@@ -63,3 +67,30 @@
 @media only screen and (min-width: 1201px)
   .content_box
     width: 1000px
+
+@media only screen and (max-width: 601px)
+  .navbar
+    flex-direction: column
+
+    &_dropdown
+      flex-direction: column
+      max-height: 0
+      transition: max-height .7s ease-out
+
+      &_section
+        display: block
+        border-top: 1px solid gray
+
+    &_button
+      display: block
+
+      &_dropdown
+        display: block
+
+    &_mobile
+      display: flex
+      justify-content: space-between
+      align-items: center
+
+  .title
+    display: inline-block
