--- a/src/assets/styles/Products.sass
+++ b/src/assets/styles/Products.sass
@@ -1,3 +1,12 @@
+.categories
+  h4
+    margin: auto
+    width: 100%
+    text-align: center
+
+  a
+    padding: 0 10px
+
 .products_container
   padding: 20px
   display: flex
