--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -4,8 +4,15 @@
   --white-theme-color-teal_text: #58b2c9
   --white-theme-color-teal_bg: #56c3df
   --white-theme-color-teal2: #83d5e9
-  
-  
+
+a
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+
 p, h1, h2, h3, h4, h5, h6
   padding: 0
   margin: 0
@@ -14,13 +21,12 @@ h1
   padding: 0 10px 10px
   margin-bottom: 10px
   border-bottom: 1px solid var(--white-theme-color-white2)
-  
-.float-right 
+
+.float-right
   float: right !important
 
-.float-left 
+.float-left
   float: left !important
-  
 
 h1, h2, h3, h4, h5, h6
   padding: 5px 0 7px
