removed some unecessary stuff

--- a/src/assets/styles/Layout.sass
+++ b/src/assets/styles/Layout.sass
@@ -64,9 +64,9 @@
     transition: height .7s ease-out
 
   &_list
-    padding: 12px 0
+    // padding: 12px 0
     overflow-y: scroll
-    max-height: 50px
+    max-height: 89px
 
     a
       display: block
@@ -108,7 +108,7 @@
       background: #333
       width: 100vw
       position: absolute
-      bottom: 199px
+      bottom: 193px
       transition: all .7s ease-out
 
       &_section
